# yass

./: .common-repo.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  GOAL.md  README.md  build.zig  build.zig.zon  cog.toml  go.mod  go.sum  package.json  pyproject.toml  yass-cli.cabal  yass.v1.schema.json  yass.yass.yaml
.claude/: .gitignore
.github/workflows/: ci.yaml  conventional-commits.yaml  pre-commit.yaml  release.yaml
app/: Main.hs
cmd/yass/: main.go
context/: FIXES.md  FUTURE.md  GUIDANCE-FEEDBACK.md  GUIDANCE.md  IDEAS.md  MAN-ALIGNMENT.md  NOTES.md  OPEN-FEEDBACK.md  RECOMMENDATIONS.md  SPEC-FEEDBACK.md  TEST-TAXONOMY.md  yass-reference.md
experiment/: FINDINGS.md  LOG.md  STATUS.md  TOOLING.md  run-prompt.md
experiment/round-01/: PLAN.md  prompt.md  results.md
experiment/round-02/: PLAN.md  results.md
experiment/round-03/: PLAN.md  results.md
experiment/round-04/: PLAN.md  results.md
experiment/round-05/: PLAN.md  prompt.md  results.md
internal/cli/: dispatch.go  dispatch_test.go
internal/errors/: codes.go  line.go  line_test.go
internal/exitcode/: exitcode.go
internal/list/: list.go  list_test.go
internal/parser/: parser.go  parser_test.go
internal/query/: extract.go  extract_test.go  inline.go  inline_test.go  lookup.go  lookup_test.go  query.go  query_test.go
internal/shared/: discover.go  discover_test.go  findroot.go  findroot_test.go  glob.go  glob_test.go  types.go
internal/validate/: checkpreamble.go  checkpreamble_test.go  checkrefs.go  checkrefs_test.go  checkspec.go  checkspec_test.go  checkuniqueness.go  checkuniqueness_test.go  checkyaml.go  checkyaml_test.go  command.go  command_test.go  types.go
internal/version/: version.go
script/: .gitignore  agent  build.sh  test.sh
spec/: cli.errors.yass.yaml  cli.list.yass.yaml  cli.query.yass.yaml  cli.shared.yass.yaml  cli.validate.yass.yaml  cli.yass.yaml
src/: argv.c  argv.h  argv.rs  check.cpp  check.hpp  check_preamble.c  check_preamble.h  check_refs.c  check_refs.h  check_spec.c  check_spec.h  check_uniqueness.c  check_uniqueness.h  check_yaml.c  check_yaml.h  cli.ts  diag.cpp  diag.hpp  discover.c  discover.h  discover.ts  dispatch.cpp  dispatch.hpp  dispatch.ts  emit.c  emit.cpp  emit.h  emit.hpp  error-line.ts  error.c  error.h  error_line.rs  errors.rs  errors.ts  errors.zig  find-root.ts  fs.cpp  fs.hpp  glob.c  glob.h  (+47 more)
src/Yass/: CLI.hs  Discover.hs  ErrorLine.hs  Glob.hs  List.hs  Parser.hs  ProjectRoot.hs  Query.hs  Types.hs  Validate.hs
src/Yass/Query/: ExtractFragment.hs  InlineConforms.hs  NameLookup.hs  OutputProfile.hs
src/Yass/Validate/: CheckPreamble.hs  CheckRefs.hs  CheckSpec.hs  CheckUniqueness.hs  CheckYAML.hs
src/yass/: __init__.py  __main__.py  cli.py  errors.py  list_cmd.py  parser.py  query.py  shared.py  validate.py
test/: Main.hs  discover.test.ts  dispatch.test.ts  error-line.test.ts  errors.test.ts  find-root.test.ts  glob.test.ts  list.test.ts  query.test.ts  test_argv.c  test_check_preamble.c  test_check_refs.c  test_check_spec.c  test_check_uniqueness.c  test_check_yaml.c  test_discover.c  test_emit.c  test_error.c  test_glob.c  test_list.c  test_main.c  test_path.c  test_query.c  test_utf8.c  test_validate.c  test_yaml_parse.c  test_yass.c  tinytest.h  validate.test.ts  yaml-parser.test.ts
test-specs/round-01-berth/oracle/: grade.py
test-specs/round-01-berth/spec/: berth.reference.yass.yaml  berth.yass.yaml
test-specs/round-01-smoke/oracle/: grade.py
test-specs/round-01-smoke/spec/: double.yass.yaml
test-specs/round-02-apiary/oracle/: grade.py
test-specs/round-02-apiary/spec/: honey.grade.yass.yaml  honey.pack.yass.yaml  honey.shared.yass.yaml  honey.tally.yass.yaml
test-specs/round-03-vault/oracle/: grade.py  ref.py
test-specs/round-03-vault/spec/: vault.certify.yass.yaml  vault.report.yass.yaml  vault.shared.yass.yaml
test-specs/round-04-axle/oracle/: HOWTORUN.txt  grade.py  ref.py
test-specs/round-04-axle/spec/: axle.audit.yass.yaml  axle.roster.yass.yaml  axle.shared.yass.yaml
test-specs/round-05-scale/oracle/: HOWTORUN.txt  grade.py  ref.py
test-specs/round-05-scale/spec/: scale.audit.yass.yaml  scale.run.yass.yaml  scale.shared.yass.yaml  scale.tare.yass.yaml  scale.weigh.yass.yaml
test/Yass/: CLISpec.hs  DiscoverSpec.hs  ErrorLineSpec.hs  GlobSpec.hs  IntegrationSpec.hs  ListSpec.hs  ParserSpec.hs  ProjectRootSpec.hs  QuerySpec.hs  TypesSpec.hs  ValidateSpec.hs
test/Yass/Query/: ExtractFragmentSpec.hs  InlineConformsSpec.hs  NameLookupSpec.hs  OutputProfileSpec.hs
test/Yass/Validate/: CheckPreambleSpec.hs  CheckRefsSpec.hs  CheckSpecSpec.hs  CheckUniquenessSpec.hs  CheckYAMLSpec.hs
test/fixtures/: cross-ref-target.yass.yaml  invalid-bad-version.yass.yaml  invalid-duplicate-spec.yass.yaml  invalid-no-preamble.yass.yaml  invalid-unknown-slot.yass.yaml  valid-conforms.yass.yaml  valid-multi-spec.yass.yaml  valid-preamble-only.yass.yaml  valid-refs.yass.yaml  valid-simple.yass.yaml  valid-with-refs.yass.yaml
tests/: check_test.cpp  conftest.py  diag_test.cpp  dispatch_invariants_test.cpp  dispatch_test.cpp  fs_test.cpp  list_test.cpp  query_test.cpp  scaffold_test.cpp  test_cli.py  test_errors.py  test_list.py  test_parser.py  test_query.py  test_shared.py  test_validate.py  textio_test.cpp  validate_test.cpp  yaml_test.cpp
tests/support/: diff.hpp  proc.hpp  pty.hpp  tmptree.hpp
